# winston

./: .gitignore  LICENSE  README.md  config-default.toml  pyproject.toml  tox.ini
winston/: __main__.py  config.py
